fix: selection of boot entry
Fix selection of boot entry, #12312 was not a proper fix.

Signed-off-by: Noel Georgi <git@frezbo.dev>
(cherry picked from commit 7eaa725d0dba18392279f5b43d167aaf18f43b99)
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-12-15T14:23:39Z by kres 4b09af7.
+# Generated on 2025-12-15T14:45:49Z by kres 4b09af7.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -3800,6 +3800,14 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
+      - name: installer
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          IMAGER_ARGS: --extra-kernel-arg=talos.extra_cmdline=extra-super-cmdline
+          PLATFORM: linux/amd64,linux/arm64
+          TAG_SUFFIX_OUT: -extra-cmdline
+        run: |
+          make installer
       - name: provision-tests-prepare
         run: |
           make provision-tests-prepare
