fix: bond configuration with new settings
This was manually verified on Equinix Metal box.

Two fixes:

1. `missed_max` should be treated specially - it can't be set for some
   bond types, but at the same time kernel returns value '2' for it.

2. Fix default configuration for bonds set via platform config for
   Equinix Metal, nocloud and OpenStack.

See https://github.com/siderolabs/talos/issues/12315

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 82027eb9b30aa128099b27f638098d78857ecb4b)

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/equinixmetal/testdata/expected-2bonds.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/equinixmetal/testdata/expected-2bonds.yaml
@@ -74,8 +74,9 @@ links:
         packetsPerSlave: 1
         numPeerNotif: 1
         tlbLogicalLb: 1
+        useCarrier: true
         adActorSysPrio: 65535
-        missedMax: 2
+        adLacpActive: "on"
       layer: platform
     - name: bond1
       logical: true
@@ -99,8 +100,9 @@ links:
         packetsPerSlave: 1
         numPeerNotif: 1
         tlbLogicalLb: 1
+        useCarrier: true
         adActorSysPrio: 65535
-        missedMax: 2
+        adLacpActive: "on"
       layer: platform
 routes:
     - family: inet4
