--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v1-pnap.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v1-pnap.yaml
@@ -49,8 +49,9 @@ links:
         packetsPerSlave: 1
         numPeerNotif: 1
         tlbLogicalLb: 1
+        useCarrier: true
         adActorSysPrio: 65535
-        missedMax: 2
+        adLacpActive: "on"
       layer: platform
     - name: bond0.2
       logical: true
