--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/openstack/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/openstack/testdata/expected.yaml
@@ -52,8 +52,9 @@ links:
         packetsPerSlave: 1
         numPeerNotif: 1
         tlbLogicalLb: 1
+        useCarrier: true
         adActorSysPrio: 65535
-        missedMax: 2
+        adLacpActive: "on"
       layer: platform
     - name: eth0
       logical: false
