--- a/.github/workflows/integration-extensions-cron.yaml
+++ b/.github/workflows/integration-extensions-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-12-11T16:40:05Z by kres 4b09af7.
+# Generated on 2025-12-13T19:54:56Z by kres 4b09af7.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -99,7 +99,7 @@ jobs:
           PUSH: "true"
           REGISTRY: registry.dev.siderolabs.io
         run: |
-          make all extensions-metadata -C _out/extensions
+          make all extensions-metadata PKGS_PREFIX=ghcr.io/dsseng PKGS=v1.13.0-alpha.0-18-ge03c17a -C _out/extensions
       - name: installer extensions
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
