try kCFI kernel + NVIDIA OSS
I have not managed to make GPL-incompatible modules build with CFI

Try open source NVIDIA driver to validate

Signed-off-by: Dmitrii Sharshakov <dmitry.sharshakov@siderolabs.com>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -2733,7 +2733,7 @@ spec:
           command: nvidia-container-toolkit-lts nvidia-open-gpu-kernel-modules-lts zfs extensions-metadata
           arguments:
             - PKGS_PREFIX=ghcr.io/dsseng
-            - PKGS=v1.13.0-alpha.0-18-ge03c17a
+            - PKGS=v1.13.0-alpha.0-19-gf2ee614-dirty
             - -C
             - _out/extensions
           environment:
