--- a/hack/release.toml
+++ b/hack/release.toml
@@ -20,7 +20,7 @@ preface = """
         description = """\
 Linux: 6.18.0
 Kubernetes: 1.35.0-rc.0
-CNI Plugins: 1.8.0
+CNI Plugins: 1.9.0
 cryptsetup: 2.8.1
 LVM2: 2_03_37
 systemd-udevd: 257.8
@@ -31,6 +31,7 @@ Flannel: 0.27.4
 Flannel CNI plugin: v1.8.0-flannel2
 runc: 1.3.4
 containerd: 2.1.5
+zfs: 2.4.0-rc.5
 
 Talos is built with Go 1.25.5.
 """
