feat: implement kubernetes server-side apply
* add SSA via the new go-kubernetes library implementation to talosctl `upgrade-k8s` command
* add SSA via direct ResourceInterface call into talos (machined) with a manual inventory update
* add an integration test for ssa functionality

Co-authored-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
Signed-off-by: Orzelius <33936483+Orzelius@users.noreply.github.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -88,6 +88,14 @@ The related `GenerateConfiguration` API method has also been removed.
 Users are encouraged to use other installation methods, such as using pre-generated configuration files, or using Omni.
 """
 
+    [notes.k8s_ssa]
+        title = "Kubernetes server-side apply"
+        description = """\
+Talos now uses inventory backed server-side apply when applying bootsrap manifests (including `extraManifests` and `inlineManifests`).
+Purging of unneeded manifests is automatically performed.
+The switch and inventory backfill is automatic and no action is needed from the user.
+"""
+
 [make_deps]
 
     [make_deps.tools]
