--- a/hack/release.toml
+++ b/hack/release.toml
@@ -7,7 +7,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 ignore_deps = ["github.com/coredns/coredns"]
 
 # previous release
-previous = "v1.11.4"
+previous = "v1.11.5"
 
 pre_release = false
 
@@ -18,9 +18,10 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-containerd: 2.1.5
+Linux: 6.12.62
+runc: 1.3.4
 
-Talos is built with Go 1.24.9.
+Talos is built with Go 1.24.11.
 """
 
 [make_deps]
