feat: enforce `proc_mem.force_override=never` by default
Note: this is Talos 1.13 only, and will only be enabled once we get to
release v1.13.0-alpha.0.

See https://github.com/siderolabs/pkgs/pull/1412#issuecomment-3665787378
for more details.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -35,6 +35,14 @@ These virtiofs external volumes are not supported when SELinux is running
 in enforcing mode.
 """
 
+    [notes.procpidmem]
+        title = "/proc/PID/mem Access Hardening"
+        description = """\
+A new kernel parameter `proc_mem.force_override=never` has been introduced by default to enhance system security
+by preventing unwanted writes to protected process memory via `/proc/PID/mem`.
+If the kernel parameter is removed, default behavior is restored, allowing access only if the process is traced.
+"""
+
 [make_deps]
 
     [make_deps.tools]
