test: run virtiofs tests only when virtiofsd is running
Detect if virtiofsd is created, and then run or skip virtiofs volumes tests.

Signed-off-by: Mateusz Urbanek <mateusz.urbanek@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -24,6 +24,17 @@ containerd: 2.2.0
 Talos is built with Go 1.25.5.
 """
 
+    [notes.external_volumes]
+        title = "External Volumes"
+        description = """\
+Talos now supports virtiofs-based external volumes via the new
+[ExternalVolumeConfig](https://www.talos.dev/v1.13/reference/configuration/block/externalvolumeconfig/)
+document.
+
+These virtiofs external volumes are not supported when SELinux is running
+in enforcing mode.
+"""
+
 [make_deps]
 
     [make_deps.tools]
