--- a/.kres.yaml
+++ b/.kres.yaml
@@ -477,10 +477,9 @@ spec:
             TAG_SUFFIX_IN: -enforcing
             EXTRA_TEST_ARGS: -talos.enforcing
             IMAGE_REGISTRY: registry.dev.siderolabs.io
-            QEMU_EXTRA_DISKS: "4"
+            QEMU_EXTRA_DISKS: "3"
             QEMU_EXTRA_DISKS_SIZE: "10240"
-            QEMU_EXTRA_DISKS_DRIVERS: "virtiofs,ide,nvme"
-            QEMU_EXTRA_DISKS_TAGS: "disk0"
+            QEMU_EXTRA_DISKS_DRIVERS: "ide,nvme"
             WITH_CONFIG_PATCH_WORKER: "@hack/test/patches/ephemeral-nvme.yaml:@hack/test/patches/dm-raid-module.yaml"
             WITH_USER_DISK: "true"
             WITH_ENFORCING: true
