--- a/hack/release.toml
+++ b/hack/release.toml
@@ -23,6 +23,9 @@ containerd: 2.2.0
 etcd: 3.6.7
 CoreDNS: 1.13.2
 Kubernetes: 1.35.0
+Flannel CNI plugin: v1.9.0-flannel1
+LVM2: 2_03_38
+runc: 1.4.0
 
 Talos is built with Go 1.25.5.
 """
