--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,20 +18,19 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.18.0
+Linux: 6.18.1
 Kubernetes: 1.35.0-rc.0
 CNI Plugins: 1.9.0
 cryptsetup: 2.8.1
 LVM2: 2_03_37
 systemd-udevd: 257.8
-runc: 1.3.2
 CoreDNS: 1.13.1
 etcd: 3.6.6
 Flannel: 0.27.4
 Flannel CNI plugin: v1.8.0-flannel2
 runc: 1.3.4
 containerd: 2.1.6
-zfs: 2.4.0-rc.5
+zfs: 2.4.0
 
 Talos is built with Go 1.25.5.
 """
