--- a/hack/release.toml
+++ b/hack/release.toml
@@ -7,7 +7,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 ignore_deps = ["github.com/coredns/coredns"]
 
 # previous release
-previous = "v1.10.7"
+previous = "v1.10.8"
 
 pre_release = false
 
@@ -19,12 +19,10 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.12.58
-Kubernetes: 1.33.6
-Runc: v1.2.8
-Containerd: v2.0.7
+Linux: 6.12.63
+runc: 1.2.9
 
-Talos is built with Go 1.24.10.
+Talos is built with Go 1.24.11.
 """
 
 [make_deps]
