--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,7 +18,7 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.18.1
+Linux: 6.18.2
 containerd: 2.2.1
 etcd: 3.6.7
 CoreDNS: 1.13.2
@@ -26,6 +26,8 @@ Kubernetes: 1.35.0
 Flannel CNI plugin: v1.9.0-flannel1
 LVM2: 2_03_38
 runc: 1.4.0
+systemd: 259
+cryptsetup: 2.8.3
 
 Talos is built with Go 1.25.5.
 """
