feat: support multiple values for extraArgs
BREAKING: internal resources for the components use different
representation of AxtraArgs, resulting in modified types in protocol
buffers.

Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -129,6 +129,15 @@ It replaces and deprecates the previous method of configuring KubeSpan via the `
 The old configuration field will continue to work for backward compatibility.
 """
 
+    [notes.extraArgs]
+        title = "Extra Arguments accept slices in addition to strings"
+        description = """\
+Several Talos configuration fields that previously accepted single string values for extra arguments have been updated to accept slices of strings as well.
+This includes fields such as `.cluster.apiServer.extraArgs`.
+
+BREAKING: If you were relying on the resources EtcdConfigs, KubeletConfigs, ControllerManagerConfigs, SchedulerConfigs or APIServerConfigs, the protobuf format has changed from `map<string,string>` to `map<string,message>`.
+"""
+
 [make_deps]
 
     [make_deps.tools]
